--- a/apps/postgresql/statefulset.yaml
+++ b/apps/postgresql/statefulset.yaml
@@ -1,28 +1,49 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-postgresql
+spec:
+  accessModes:
+    - ReadWriteOnce
+  capacity:
+    storage: 1Gi
+  hostPath:
+    path: /mnt/data/postgresql
+
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgresql
+  labels:
+    name: postgresql
 spec:
-  serviceName: "postgresql"
+  serviceName: postgresql-service
   replicas: 1
   selector:
     matchLabels:
-      app: postgresql
+      name: postgresql
+  volumeClaimTemplates:
+    - metadata:
+        name: pvc-postgresql
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        volumeMode: Filesystem
+        resources:
+          requests:
+            storage: 1Gi
   template:
     metadata:
+      name: postgresql
       labels:
-        app: postgresql
+        name: postgresql
     spec:
-      volumes:
-        - name: postgredb
-          persistentVolumeClaim:
-            claimName: pvc-postgresql
       containers:
         - name: postgresql
           image: postgres:15-alpine
           ports:
             - containerPort: 5432
-              name: postgres
           volumeMounts:
             - name: postgredb
               mountPath: /var/lib/postgresql/data
