update postgresql statfulset

--- a/apps/postgresql/statefulset.yaml
+++ b/apps/postgresql/statefulset.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-postgresql
+  name: postgresql-volume
 spec:
   accessModes:
     - ReadWriteOnce
   capacity:
     storage: 1Gi
   hostPath:
-    path: /mnt/data/postgresql
+    path: /home/fathu/kubernetes/data/postgresql
 
 ---
 apiVersion: apps/v1
@@ -25,7 +25,7 @@ spec:
       name: postgresql
   volumeClaimTemplates:
     - metadata:
-        name: pvc-postgresql
+        name: postgresql-volume-claim
       spec:
         accessModes:
           - ReadWriteOnce
@@ -45,12 +45,12 @@ spec:
           ports:
             - containerPort: 5432
           volumeMounts:
-            - name: pvc-postgresql
+            - name: postgresql-volume-claim
               mountPath: /var/lib/postgresql/data
           env:
             - name: POSTGRES_DB
-              value: "todolist"
+              value: todolist
             - name: POSTGRES_USER
-              value: "admin"
+              value: admin
             - name: POSTGRES_PASSWORD
-              value: "password"
+              value: password
