--- a/apps/postgresql/statefulset.yaml
+++ b/apps/postgresql/statefulset.yaml
@@ -8,7 +8,7 @@ spec:
   capacity:
     storage: 1Gi
   hostPath:
-    path: /home/fathu/kubernetes/data/postgresql
+    path: /kubernetes/data/postgresql
 
 ---
 apiVersion: apps/v1
@@ -49,8 +49,8 @@ spec:
               mountPath: /var/lib/postgresql/data
           env:
             - name: POSTGRES_DB
-              value: todolist
+              value: "todolist"
             - name: POSTGRES_USER
-              value: admin
+              value: "admin"
             - name: POSTGRES_PASSWORD
-              value: password
+              value: "password"
