--- a/apps/postgresql/service.yaml
+++ b/apps/postgresql/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgresql-service
 spec:
   selector:
-    app: postgresql
+    name: postgresql
   ports:
     - port: 5432
       targetPort: 5432
